<resources>
    <string name="app_name">PracticalTest02v7</string>
    <string name="server">SERVER</string>
    <string name="server_port">PORT</string>
    <string name="connect">CONNECT</string>
    <string name="client">CLIENT</string>
    <string name="client_address">Address</string>
    <string name="client_port">Port</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="set_alarm">Set alarm</string>
    <string name="reset_alarm">Reset alarm</string>
    <string name="poll_alarm">Poll</string>
</resources>