<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.eim.practicaltest02v7.PracticalTest02v7MainActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/server"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        >

        <EditText
            android:id="@+id/server_port_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/server_port"
            android:inputType="number"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/connect_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/connect">

        </Button>
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp">
    </Space>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/client"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        >

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/client_address_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/client_address"
                android:inputType="text"
                android:layout_gravity="center"
                />
        </ScrollView>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/client_port_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/client_port"
                android:inputType="number"
                android:layout_gravity="center"
                />
        </ScrollView>
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="2"
        android:columnCount="3">

        <EditText
            android:id="@+id/hour_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/hour"
            android:layout_row="0"
            android:layout_column="0"
            >
        </EditText>

        <EditText
            android:id="@+id/minute_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:hint="@string/minute"
            android:layout_row="0"
            android:layout_column="1"
            >
        </EditText>
        <TextView
            android:id="@+id/alarm_feedback_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="10"
            android:layout_row="0"
            android:layout_column="2">
        </TextView>
        <Button
            android:id="@+id/set_alarm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_alarm"
            android:layout_row="1"
            android:layout_column="0"
            >
        </Button>

        <Button
            android:id="@+id/reset_alarm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_alarm"
            android:layout_row="1"
            android:layout_column="1"
            >
        </Button>

        <Button
            android:id="@+id/poll_alarm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poll_alarm"
            android:layout_row="1"
            android:layout_column="2"
            >
        </Button>
    </GridLayout>




</LinearLayout>